# Util_Scripts

./: .env.example  .gitignore  ARQUIVOS_CRIADOS.md  COMECE_AQUI.txt  CONCLUSAO.md  INDEX.md  PROJECT_STRUCTURE.py  README.md  SUMMARY.md  VALIDATION_CHECKLIST.md  copy_cnf_files.py  find_string.py  find_strings.py  main.py  process_nfe.py  pyproject.toml  quickstart.py  requirements.txt  run.bat  strings_example.txt  update_xml.py
XMLs/: CUMBUCOcmfBillItens07122025.xml
data/destino/: CFe23250402333096000135592300542520460053871154.xml  CFe23250402333096000135592300542520460064927830.xml  CFe23250402333096000135592300542520460070007632.xml  NFe23260327708448000110650010000082431277084489-nfe.xml  NFe23260327708448000110650010000088211277084484-nfe.xml  NFe23260327708448000110650010000088441277084489-nfe.xml
docs/: GUIA_RAPIDO.md  MIGRATION_GUIDE.md  REFACTORING_SUMMARY.md
src/: __init__.py  config.py  file_copier.py  file_finder.py  logger.py  xml_modifier.py
